--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <!-- Mirrored from demo.themewagon.com/preview/cody-creative-bootstrap-template-for-small-agency by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 13 Mar 2017 14:38:24 GMT -->
 <head>
 	<title>Este é um teste</title>
+	<title>Adicionado mais um titulo</title>
 
 	<!-- Mobile Specific -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
