--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<title>Este é um teste</title>
 	<title>Adicionado mais um titulo</title>
-	<title>Adicionado terceiro titulo</title>
+	<title>Adicionado o</title>
 
 	<!-- Mobile Specific -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
